--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 0.1.2[/B]
+
+- Site layout changed. Fixed regular expression.
+
 [B]Version 0.1.1[/B]
 
 - Deleted languages that shouldn't have been in there from a different plugin
