--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 0.1.3[/B]
+
+- Regular Expression updated again for addition url params.
+
 [B]Version 0.1.2[/B]
 
 - Site layout changed. Fixed regular expression.
