--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 0.1.4[/B]
+
+- Rearanged his webpage again ... grml
+
 [B]Version 0.1.3[/B]
 
 - Regular Expression updated again for addition url params.
