--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,8 @@
+[B]Version 0.2.0[/B]
+
+- plugin now relies on youtube plugin to resolve urls
+- updates for Eden
+
 [B]Version 0.1.8[/B]
  
 - fixes video links
