--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B]Version 0.2.1[/B]
+
+- random fixups/cosmetics in the xml
+
 [B]Version 0.2.0[/B]
 
 - plugin now relies on youtube plugin to resolve urls
