--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B|Version 0.2.2[/B]
+
+- fixes some videos not playing. Thanks to Jonathan Fabian 
+
 [B]Version 0.2.1[/B]
 
 - random fixups/cosmetics in the xml
