--- a/changelog.txt
+++ b/changelog.txt
@@ -1,3 +1,7 @@
+[B|Version 0.2.4[/B]
+
+- Dave changed the site a bit, breaking the episode listing. Fixed.
+
 [B|Version 0.2.3[/B]
 
 - another workaround for attempts at parsing html with regexp. thanks mw9
